Fix switch button icon not centered bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,3 +11,10 @@
 @utility work-in-progress {
   display: none;
 }
+
+button[role="switch"] span > span[class*="iconify"] {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
